@startuml architecture

skinparam {
    monochrome true
    padding 1
}
class TellerCore{
    +void Tick() override
    +void Update() override
}
class GameModule{
    +void Tick() override
    +void Update() override
}

class SceneModule{
    +void Tick() override
    +void Update() override
}
class Agent{
    +void Tick() override
    +void Update() override
}
class Editor{
    +void Tick() override
    +void Update() override
}

class EpisodeEditor{
}


class EpisodeEventEditor{
}
class AssetViewer

class CSVLoader{
}

class Episode{
}

class Animation{}


TellerCore *-- GameModule
GameModule *-- SceneModule
SceneModule *-- Agent

Animation -> Agent :callback
Editor <|-- EpisodeEditor
Editor <|-- EpisodeEventEditor
Editor <|-- AssetViewer

EpisodeEditor *-- CSVLoader
EpisodeEventEditor *-- Episode

EpisodeEditor -->Episode

TellerCore *--Editor


@enduml